--- a/build.gradle
+++ b/build.gradle
@@ -24,14 +24,32 @@ repositories {
 }
 
 dependencies {
+	implementation ('org.springframework.boot:spring-boot-starter-web') {
+		exclude module: 'spring-boot-starter-tomcat'
+	}
+	implementation ('org.springframework.boot:spring-boot-starter-jetty') {
+		exclude group: 'org.eclipse.jetty.websocket', module: 'websocket-server'
+		exclude group: 'org.eclipse.jetty.websocket', module: 'javax-websocket-server-impl'
+	}
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
+	implementation 'com.newrelic.agent.java:newrelic-api:7.9.0'
+	implementation 'commons-io:commons-io:2.11.0'
+	implementation 'org.modelmapper:modelmapper:3.1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.h2database:h2'
+	implementation 'com.fasterxml.jackson.module:jackson-module-blackbird'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
+	runtimeOnly 'com.h2database:h2:2.2.220'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'com.auth0:java-jwt:4.4.0'
+	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.14'
+	compileOnly 'org.projectlombok:lombok'
+
+	// <!-- Test dependencies for all projects -->
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'uk.org.webcompere:system-stubs-jupiter:2.0.1'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
