--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=ClinicaDelCalzado-BackEnd
+
+# Database configuration
+spring.datasource.driverClassName= com.mysql.cj.jdbc.Driver
+spring.datasource.username= ${DB_USER}
+spring.datasource.password= ${DB_PASS}
+spring.datasource.url= jdbc:mysql://${DB_HOST}/${SCHEMA_NAME}?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
+# Hibernate properties
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
