--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.username= ${DB_USER}
 spring.datasource.password= ${DB_PASS}
 spring.datasource.url= jdbc:mysql://${DB_HOST}/${SCHEMA_NAME}?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
 # Hibernate properties
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
