--- a/build.gradle
+++ b/build.gradle
@@ -43,12 +43,12 @@ dependencies {
 	runtimeOnly 'com.h2database:h2:2.2.220'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'com.auth0:java-jwt:4.4.0'
-	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.14'
+	//implementation 'org.springframework.boot:spring-boot-starter-security:2.7.14'
 	compileOnly 'org.projectlombok:lombok'
 
 	// <!-- Test dependencies for all projects -->
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
+	//testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'uk.org.webcompere:system-stubs-jupiter:2.0.1'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
