Added DTOs, Repositories and Services structure Created work order

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,11 +3,11 @@
 # Database configuration
 spring:
   datasource:
-    db: railway
+    db: ${SCHEMA_NAME}
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: gaPXrBnoEQRzwvmZgCaSJwThDSJVgFfL
-    url: junction.proxy.rlwy.net:21367
+    username: ${DB_USER}
+    password: ${DB_PASS}
+    url: ${DB_HOST}
   jpa:
     show-sql: true
     generate-ddl: true
