--- a/build.gradle
+++ b/build.gradle
@@ -46,14 +46,18 @@ dependencies {
 	implementation 'com.auth0:java-jwt:4.4.0'
 	//implementation 'org.springframework.boot:spring-boot-starter-security:2.7.14'
 	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 
 	// <!-- Test dependencies for all projects -->
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	//testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.mockito:mockito-junit-jupiter:2.17.1'
+	testImplementation 'org.mockito:mockito-core:2.1.0'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'uk.org.webcompere:system-stubs-jupiter:2.0.1'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-tasks.named('test') {
+tasks.named('test', Test) {
 	useJUnitPlatform()
 }
