--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -12,4 +12,9 @@ spring:
     defer-datasource-initialization: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
+  sql:
+    init:
+      data-locations:
+        - classpath:load_sql/initial_queries.sql
+      mode: always
