--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,9 @@ dependencies {
 	runtimeOnly 'com.h2database:h2:2.2.220'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'com.auth0:java-jwt:4.4.0'
-	//implementation 'org.springframework.boot:spring-boot-starter-security:2.7.14'
+	//dependencia necesaria para poder realizar login con exito en postman
+	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.14'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
