--- a/build.gradle
+++ b/build.gradle
@@ -65,3 +65,9 @@ dependencies {
 tasks.named('test', Test) {
 	useJUnitPlatform()
 }
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'com.ClinicaDelCalzado_BackEnd.Application'
+	}
+}
